--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "iconoir-react": "^5.5.2",
+    "localforage": "^1.10.0",
     "mobx": "^6.7.0",
+    "mobx-persist-store": "^1.1.3",
     "mobx-react": "^7.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
