--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/lang-markdown": "^6.0.5",
+    "@codemirror/view": "^6.7.3",
+    "@uiw/react-codemirror": "^4.19.7",
     "iconoir-react": "^5.5.2",
     "localforage": "^1.10.0",
     "mobx": "^6.7.0",
@@ -16,6 +19,7 @@
     "mobx-react": "^7.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.5",
     "sass": "^1.57.1",
     "uuid": "^9.0.0",
     "wouter": "^2.10.0-alpha.1"
